// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LineItemRemoveLink check children format /> 1`] = `
<a
  href="#"
  label="remove product"
  onClick={[Function]}
>
  remove product
</a>
`;

exports[`<LineItemRemoveLink with custom children /> 1`] = `
<span>
  remove
</span>
`;

exports[`<LineItemRemoveLink/> 1`] = `
<a
  href="#"
  label="remove"
  onClick={[Function]}
>
  remove
</a>
`;
